participant endpoint updates
